# go-polars

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  build.sh  data.csv  go.mod  main.go  output.csv
docs/: INSTALLATION.md
polars/: download.go  init.go  io.go  polars.go  polars_go.h  setup_binary.go
polars/bindings/: Cargo.toml
polars/bindings/src/: conversions.rs  dataframe_functions.rs  expr_functions.rs  groupby_functions.rs  lib.rs
release/: RELEASE_NOTES.md  libpolars_go-linux-amd64-v0.0.12.so.md5  libpolars_go-linux-amd64-v0.0.12.so.sha256  libpolars_go-linux-amd64-v0.0.14.so.md5  libpolars_go-linux-amd64-v0.0.14.so.sha256  libpolars_go-linux-amd64-v0.0.15.so.md5  libpolars_go-linux-amd64-v0.0.15.so.sha256  libpolars_go-linux-amd64-v0.0.16.so.md5  libpolars_go-linux-amd64-v0.0.16.so.sha256  libpolars_go-linux-amd64-v0.0.17.so.md5  libpolars_go-linux-amd64-v0.0.17.so.sha256  libpolars_go-linux-amd64-v0.0.18.so.md5  libpolars_go-linux-amd64-v0.0.18.so.sha256  libpolars_go-linux-amd64-v0.0.19.so.md5  libpolars_go-linux-amd64-v0.0.19.so.sha256  libpolars_go-linux-amd64-v0.0.20.so.md5  libpolars_go-linux-amd64-v0.0.20.so.sha256  libpolars_go-linux-amd64-v0.0.21.a.md5  libpolars_go-linux-amd64-v0.0.21.a.sha256  libpolars_go-linux-amd64-v0.0.22.a.md5  libpolars_go-linux-amd64-v0.0.22.a.sha256  libpolars_go-linux-amd64-v0.0.23.a.md5  libpolars_go-linux-amd64-v0.0.23.a.sha256  libpolars_go-linux-amd64-v0.0.24.a.md5  libpolars_go-linux-amd64-v0.0.24.a.sha256  libpolars_go-linux-amd64-v0.0.25.a.md5  upload-to-github.sh  (+3 more)
src/: lib.rs
(+30 files in other folders)
