[package]
name = "polars_go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
polars = { version = "0.46", default-features = false, features = [
    "csv",
    "lazy",
    "parquet",
    "strings",
    "fmt",
] }
lazy_static = "1.5"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.package."*"]
opt-level = "z"
debug = false
